--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
             <!--Cloudstack Links-->
             <h2>Cloudstack Links</h2>
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://partnerdetailerscloudstack.github.io/Precision-Automotive-Paint-Correction-for-a-Glossy-Finish/">https://partnerdetailerscloudstack.github.io/Precision-Automotive-Paint-Correction-for-a-Glossy-Finish/</a><br>
+                <a target="_bLank" href="https://partnerdetailersmovement.s3.us-east-005.backblazeb2.com/Precision+Automotive+Paint+Correction+for+a+Glossy+Finish/index.html">https://partnerdetailersmovement.s3.us-east-005.backblazeb2.com/Precision+Automotive+Paint+Correction+for+a+Glossy+Finish/index.html</a><br>
+                <a target="_bLank" href="https://precision-automotive-paint-correc-git-1e97a6-detailers-projects.vercel.app/">https://precision-automotive-paint-correc-git-1e97a6-detailers-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://fascinating-kheer-2c37dc.netlify.app/">https://fascinating-kheer-2c37dc.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
